--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             <div class="letters-guess"></div>
         </div>
     </main>
+
+    <!--& ============== Sound ============== -->
+    <audio src="sound/correct.mp3" id="correct" preload="auto"></audio>
+    <audio src="sound/wrong.mp3" id="wrong" preload="auto"></audio>
+    <!--? ============== sweetalert2 ============== -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--? ============== Main JavaScript ============== -->
     <script src="main.js"></script>
 </body>
